--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		{
 			document.onselectstart = new Function("return false;"); // prevent text selection for canvas
 			_points = new Array();
-			_r = new Recognizer();
+			_r = new DollarRecognizer();
 			_isDown = false;
 		}
 		//
