add pic2 , add Unistroke

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-   <title>JSXGraph example</title>
+   <title>HCI 2014 HW#3</title>
    <link rel="stylesheet" type="text/css" href="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css" />
    <script type="text/javascript" src="http://jsxgraph.uni-bayreuth.de/distrib/prototype.js"></script>
    <script type="text/javascript" src="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js"></script>
@@ -137,15 +137,12 @@
 </head>
 <body onload="LoadEvent()" >
       <h1>Gestures with JavaScript</h1>
-      <p>
-      This is a browser independent version of the 
-      <i>$1 Gesture Recognizer in JavaScript</i> from 
-        Jacob O. Wobbrock, Andrew D. Wilson, and Yang Li1
-        (University of Washington and Microsoft Research), see
-        <a href="http://depts.washington.edu/aimgroup/proj/dollar/">http://depts.washington.edu/aimgroup/proj/dollar/</a>.
-        For drawing it uses the library JSXGraph, see <a href="http://jsxgraph.org">http://jsxgraph.org</a>.
-       </p> 
-       <p>Draw the gesture on the left canvas and see the result (in real time) in the right canvas.</p>
+      <p>Draw the gesture on the <inline style="color:green;">left canvas</inline> and see the result (in real time) in the <inline style="color:green;">right canvas.</inline></p>
+
+      <p>Reference :</p>
+      <p>1. $1 Recognizer : 
+      <a href="http://depts.washington.edu/aimgroup/proj/dollar/">JavaScript</a></p>
+      <p>2. <a href="http://jsxgraph.uni-bayreuth.de/~alfred/gestures/">JSXGraph demo by Alfred Wassermann</a></p>
 			<div id="canvas" style="background-color:#dddddd; height:400px; width:400px; float:left; ">
 				<span id="message" style="color:darkblue;line-height:28pt;margin-left:10pt"></span>
 			</div>
@@ -164,6 +161,8 @@
         
       </script>
       <br clear=all>
-      <img src="http://depts.washington.edu/aimgroup/proj/dollar/gestures.gif">
+      <p>Example :</p>
+      <img src="pic1.png">
+      <img src="pic2.png">
 </body>
 </html>
