--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	</script>
 </head>
 <body onload="LoadEvent()" >
-      <h1>Gestures with JavaScript</h1>
+      <h1>Gestures with JavaScript</h1><span style="float:right;font-size:0.7em;">Made by CS 100703001 Yi-Hsuan Shih</span>
       <p>Draw the gesture on the <inline style="color:green;">left canvas</inline> and see the result (in real time) in the <inline style="color:green;">right canvas.</inline></p>
 
       <p>Reference :</p>
