--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <p>Reference :</p>
       <p>1. $1 Recognizer : 
-      <a href="http://depts.washington.edu/aimgroup/proj/dollar/">JavaScript</a></p>
+      <a href="http://depts.washington.edu/aimgroup/proj/dollar/dollar.js">JavaScript</a></p>
       <p>2. <a href="http://jsxgraph.uni-bayreuth.de/~alfred/gestures/">JSXGraph demo by Alfred Wassermann</a></p>
 			<div id="canvas" style="background-color:#dddddd; height:400px; width:400px; float:left; ">
 				<span id="message" style="color:darkblue;line-height:28pt;margin-left:10pt"></span>
